<resources>
    <string name="app_name">Simon</string>

    <string name="top_scores_activity_name">Top Scores</string>
    <string name="about_activity_name">About</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_top_scores">Top Scores</string>
    <string name="start_button">Start Game</string>
    <string name="resume_button">Resume</string>
    <string name="how_to_play">How to play</string>

    <string name="title_activity_top_scores">TopScoresActivity</string>

    <string name="high_score_label">You got a high score!</string>
    <string name="enter_score_name">Enter your name:</string>
    <string name="enter_score_button">Enter</string>

    <string name="about_title">About Simon</string>
    <string name="about_description">This app was created at Seattle Central College
        in the Advanced Android class by Kayla Fenske, Qais Fulton, Francisco Ivarra, Sean Kram and Darryl Kukor.</string>

    <string name="how_to_play_title">How to play:</string>
    <string name="how_to_play_text">After clicking Start Game, watch the flash sequence.
        Once the buttons have finished flashing, click the buttons in order of the flashes.
        If you get the sequence correct, the flash sequence will continue to increase by one flash each time.</string>
    <string name="button_ok">OK</string>

    <string name="about_button_title">ABOUT SIMON</string>
    <string name="about_button_description">Who built it!</string>
    <string name="how_to_play_button_title">HOW TO PLAY</string>
    <string name="how_to_play_button_description">Learn the rules...</string>
    <string name="clear_scores_button_title">CLEAR SCORES</string>
    <string name="clear_scores_button_description">Clear your top scores list</string>
    <string name="change_themes_title">CHANGE THEME</string>
    <string name="change_themes_description">Customize your gameboard</string>
    <string name="clear_scores_ok">OK</string>
    <string name="clear_scores_cancel">Cancel</string>
    <string name="clear_scores_title">Clear Scores</string>
    <string name="clear_scores_description">Are you sure you want to clear your high scores?</string>
</resources>





