<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simonsplashblur">

    <LinearLayout
        android:id="@+id/about_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp">
        
        <TextView
            android:id="@+id/aboutButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:text="@string/about_button_title"/>
        <TextView
            android:id="@+id/aboutButtonDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/aboutButtonTitle"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:text="@string/about_button_description"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/how_to_play_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/howToPlayButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/how_to_play_button_title"/>
        <TextView
            android:id="@+id/howToPlayButtonDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/aboutButtonTitle"
            android:textColor="#FFFFFF"
            android:text="@string/how_to_play_button_description"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/clear_scores_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/clearScoresButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/clear_scores_button_title"/>
        <TextView
            android:id="@+id/clearScoresButtonDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/aboutButtonTitle"
            android:textColor="#FFFFFF"
            android:text="@string/clear_scores_button_description"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/change_themes_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/changeThemesButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/change_themes_title"/>
        <TextView
            android:id="@+id/changeThemesButtonDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/aboutButtonTitle"
            android:textColor="#FFFFFF"
            android:text="@string/change_themes_description"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF" />
</LinearLayout>