<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_margin="5dp"
            android:background="@android:color/background_light">
            <TextView
                android:id="@+id/how_to_play_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/clear_scores_title" />
            <TextView
                android:id="@+id/how_to_play_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/clear_scores_description" />
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/clear_scores_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_scores_ok" />
                <Button
                    android:id="@+id/clear_scores_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/clear_scores_ok"
                    android:text="@string/clear_scores_cancel" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>